--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<!-- Write your code below -->
- <h1>The Best Movies According To Utkarsh</h1>
+<!DOCTYPE html>
+<html lang="eng">
+ <head>
+  <meta name="google-site-verification" content="dtmEQ-ofnSHNjt0X-m-XODRYmrcG_7uPkuVVaz6GBas" />
+  <meta charset="UTF-8">
+  <title>Fame</title>
+ </head>
+ <body>
+<h1>The Best Movies According To Utkarsh</h1>
  <h2>My top 5 movies of all-time</h2>
  <hr />
 <h3>I wanna eat you pancreas</h3>
@@ -13,3 +20,5 @@ it was about a boy who bullyies a girl who cant speak.
 <p> it was my first animated series that i watched. </p>
 <h3> The shawshank Redemption</h3>
 <p>one of the best hollywood movie i ever saw</p>
+ </body>
+</html>
